# Candlestick_chart

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4fd26ad  GAZPROM_2022.txt  README.md  analisys_dialog.cpp  analisys_dialog.h  boxdatareader.cpp  boxdatareader.h  datareader.cpp  datareader.h  dateandtime_dialog.cpp  dateandtime_dialog.h  fileverification.cpp  fileverification.h  main.cpp  main_dialog.cpp  main_dialog.h  mainwindow.cpp  plottingchart_dialog.cpp  plottingchart_dialog.h  stock_quotes_chart.cpp  stock_quotes_chart.h  ticket_data.h
src/: analisys_dialog.cpp  analisys_dialog.h  boxdatareader.cpp  boxdatareader.h  datareader.cpp  datareader.h  dateandtime_dialog.cpp  dateandtime_dialog.h  fileverification.cpp  fileverification.h  main.cpp  main_dialog.cpp  main_dialog.h  mainwindow.cpp  plottingchart_dialog.cpp  plottingchart_dialog.h  stock_quotes_chart.cpp  stock_quotes_chart.h  ticket_data.h
